<resources>
    <string name="app_name">MyMoney</string>
    <string name="title_home">Главная</string>
    <string name="title_history">История</string>
    <string name="title_stat">Статистика</string>
    <string name="title_cards">Кошельки</string>
    <string name="Expenses">Расходы</string>
    <string name="Incomes">Доходы</string>
    <string name="health">Здоровье</string>
    <string name="goods">Покупки</string>
    <string name="Cafes">Рестораны</string>
    <string name="Eat">Еда</string>
    <string name="car">Машина</string>
    <string name="House">Дом</string>
    <string name="Sport">Спорт</string>
    <string name="Hobbies">Досуг</string>
    <string name="AddCategory">Добавить категорию</string>
    <string name="Salery">Зарплата</string>
    <string name="Freelance">Фриланс</string>
    <string name="Sells">Продажи</string>
    <string name="Rents">Аренда</string>
    <string name="LastOper">Последние операции</string>
    <string name="currentMonth">Текущий месяц</string>
    <string name="MonthExp">Расходы месяца</string>
</resources>