<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment"
    android:background="@color/mainBlue">

    <TextView
        android:id="@+id/monthInc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:textAlignment="center"
        android:fontFamily="@font/open_sans"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/yearInc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:textAlignment="center"
        android:fontFamily="@font/open_sans"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/changeInc"
        android:clickable="false"
        android:layout_width="0dp"
        android:layout_height="195dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:background="@drawable/button_bg"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/yearInc"
        android:text="@string/Incomes"
        android:fontFamily="@font/open_sans"
        android:textColor="@color/lightBlue"
        android:paddingBottom="167dp"
        android:textSize="16sp"
        android:textAllCaps="false"/>

    <TextView
        android:id="@+id/incomes"
        android:text="2500 р"
        android:textColor="@color/lightBlue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:textAlignment="center"
        android:fontFamily="@font/open_sans"
        android:textSize="45sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:elevation="2dp"/>

    <ImageButton
        android:id="@+id/changeBtnInc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_change"
        android:layout_marginTop="165dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:elevation="2dp"
        ></ImageButton>

    <TextView
        android:id="@+id/smallExpenses"
        android:text="1358 р"
        android:textColor="@color/purple_200"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:textAlignment="center"
        android:fontFamily="@font/open_sans"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:elevation="2dp"
        android:alpha="0.7"/>

    <TextView
        android:id="@+id/ExpenseTitle"
        android:text="@string/Expenses"
        android:textColor="@color/lightBlue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="235dp"
        android:textAlignment="center"
        android:fontFamily="@font/open_sans"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:elevation="2dp"
        android:alpha="0.7"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:columnCount="4"
        android:layout_marginTop="300dp"
        android:alignmentMode="alignMargins">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_columnWeight="1"
            android:orientation="vertical"
            android:gravity="center"
            >
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_salery"
                android:textAlignment="center"
                ></ImageButton>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="7dp"
                android:text="@string/Salery"
                android:fontFamily="@font/open_sans"
                android:textColor="@color/white"
                android:textSize="11sp"
                android:textAlignment="center"
                ></TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="130 р"
                android:fontFamily="@font/open_sans"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textAlignment="center"
                ></TextView>
        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_columnWeight="1"
            android:orientation="vertical"
            android:gravity="center" >
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_freelance"
                android:textAlignment="center"
                ></ImageButton>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="7dp"
                android:text="@string/Freelance"
                android:fontFamily="@font/open_sans"
                android:textColor="@color/white"
                android:textSize="11sp"
                android:textAlignment="center"
                ></TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="130 р"
                android:fontFamily="@font/open_sans"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textAlignment="center"
                ></TextView>
        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_columnWeight="1"
            android:orientation="vertical"
            android:gravity="center" >
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_sells"
                android:textAlignment="center"
                ></ImageButton>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="7dp"
                android:text="@string/Sells"
                android:fontFamily="@font/open_sans"
                android:textColor="@color/white"
                android:textSize="11sp"
                android:textAlignment="center"
                ></TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="130 р"
                android:fontFamily="@font/open_sans"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textAlignment="center"
                ></TextView>
        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_columnWeight="1"
            android:orientation="vertical"
            android:gravity="center" >
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_rents"
                android:textAlignment="center"
                ></ImageButton>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="7dp"
                android:text="@string/Rents"
                android:fontFamily="@font/open_sans"
                android:textColor="@color/white"
                android:textSize="11sp"
                android:textAlignment="center"
                ></TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="130 р"
                android:fontFamily="@font/open_sans"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textAlignment="center"
                ></TextView>
        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_columnWeight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginTop="20dp"
            >
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_add"
                android:textAlignment="center"
                ></ImageButton>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="7dp"
                android:text="@string/AddCategory"
                android:fontFamily="@font/open_sans"
                android:textColor="@color/white"
                android:textSize="11sp"
                android:textAlignment="center"
                ></TextView>
        </LinearLayout>

    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>