<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.notifications.NotificationsFragment"
    android:background="@color/mainBlue">
        <LinearLayout
            android:id="@+id/linerMonth"
            android:layout_height="200dp"
            android:layout_width="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/lightBlue"
            android:orientation="vertical">
            <TextView
                android:id="@+id/monthYear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15dp"
                android:textAlignment="center"
                android:fontFamily="@font/open_sans"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textColor="@color/white"/>
            <TextView
                android:id="@+id/monthSum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15dp"
                android:textAlignment="center"
                android:fontFamily="@font/open_sans"
                android:textSize="32sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textColor="#7AF4B2"/>
            <TextView
                android:id="@+id/monthText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15dp"
                android:textAlignment="center"
                android:fontFamily="@font/open_sans"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textColor="@color/white"/>
        </LinearLayout>
    <TextView
        android:id="@+id/descriptionMonth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:textAlignment="center"
        android:fontFamily="@font/open_sans"
        android:textSize="14sp"
        android:text="@string/currentMonth"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linerMonth"
        android:textColor="@color/white"/>
    <TextView
        android:id="@+id/curMonthInc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:textAlignment="center"
        android:fontFamily="@font/open_sans"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionMonth"
        android:textColor="@color/lightBlue"/>
    <TextView
        android:id="@+id/incText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:textAlignment="center"
        android:fontFamily="@font/open_sans"
        android:textSize="14sp"
        android:text="@string/Incomes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/curMonthInc"
        android:textColor="@color/white"/>
    <TextView
        android:id="@+id/curMonthExp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="15dp"
        android:textAlignment="center"
        android:fontFamily="@font/open_sans"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionMonth"
        android:textColor="@color/purple_200"/>
    <TextView
        android:id="@+id/expText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="15dp"
        android:textAlignment="center"
        android:fontFamily="@font/open_sans"
        android:textSize="14sp"
        android:text="@string/Expenses"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/curMonthExp"
        android:textColor="@color/white"/>
    <View
        android:id="@+id/incLine"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.45"
        android:layout_height="8dp"
        app:layout_constraintTop_toBottomOf="@+id/incText"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:background="@color/lightBlue"
        android:layout_width="0dp"></View>
    <View
        android:id="@+id/expLine"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.45"
        android:layout_width="0dp"
        android:layout_height="8dp"
        app:layout_constraintTop_toBottomOf="@+id/expText"
        app:layout_constraintLeft_toRightOf="@id/incLine"
        android:layout_marginTop="10dp"
        android:background="@color/purple_200"></View>
    <TextView
        android:id="@+id/monthTextDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:textAlignment="center"
        android:fontFamily="@font/open_sans"
        android:textSize="14sp"
        android:text="@string/MonthExp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/incLine"
        android:textColor="@color/white"/>
    <ListView
        android:id="@+id/ExpList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/monthTextDesc"
        android:scrollbars="none"/>
</androidx.constraintlayout.widget.ConstraintLayout>